<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.1</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>uk.gov.crowncommercial.dts</groupId>
	<artifactId>ccs-scale-cat-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ccs-scale-cat-service</name>
	<description>SCALE CaT (Tenders) API</description>

	<properties>
		<java.version>11</java.version>
		<swagger-parser.version>2.0.29</swagger-parser.version>
		<guava.version>30.1.1-jre</guava.version>
		<openapi-generator.version>5.2.1</openapi-generator.version>
		<hibernate-types.version>2.14.0</hibernate-types.version>
		<modelmapper.version>2.4.5</modelmapper.version>
		<simple-odf.version>0.9.0</simple-odf.version>
		<jena-core.version>4.3.2</jena-core.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.retry</groupId>
			<artifactId>spring-retry</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-reactive-httpclient</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>io.swagger.parser.v3</groupId>
			<artifactId>swagger-parser</artifactId>
			<version>${swagger-parser.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.validation</groupId>
					<artifactId>validation-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.vladmihalcea</groupId>
			<artifactId>hibernate-types-52</artifactId>
			<version>${hibernate-types.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>${modelmapper.version}</version>
		</dependency>
		<dependency>
			<groupId>org.odftoolkit</groupId>
			<artifactId>simple-odf</artifactId>
			<version>${simple-odf.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.jena</groupId>
					<artifactId>jena-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Snyk recommended -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-core</artifactId>
			<version>${jena-core.version}</version>
		</dependency>

		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>${openapi-generator.version}</version>
				<executions>
					<execution>
						<id>tenders-api</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>https://raw.githubusercontent.com/Crown-Commercial-Service/ccs-scale-api-definitions/f0b397038096a6a72366fb9ef8760aa44ebccabe/cat/CaT-service.yaml</inputSpec>
							<generatorName>spring</generatorName>
							<generateModels>true</generateModels>
							<generateSupportingFiles>false</generateSupportingFiles>
							<generateApis>false</generateApis>
							<generateModelTests>false</generateModelTests>
							<modelPackage>uk.gov.crowncommercial.dts.scale.cat.model.generated</modelPackage>
							<skipValidateSpec>false</skipValidateSpec>
							<strictSpec>true</strictSpec>
							<languageSpecificPrimitives>OneOfstringinteger,OneOfstringnumberintegerobject,OneOfLinkedReleaseEmbeddedRelease,OneOfstringnumber,OneOfstringintegernumberboolean,OneOfnumberarray,OneOfLinkedRelease1,OneOfdateintegerboolean</languageSpecificPrimitives>
							<typeMappings>Error=uk.gov.crowncommercial.dts.scale.cat.model.ApiError,OneOfstringinteger=String,FileFormat=Object,OneOfstringnumberintegerobject=String,OneOfLinkedReleaseEmbeddedRelease=Object,OneOfstringnumber=String,OneOfstringintegernumberboolean=String,OneOfnumberarray=Object,OneOfLinkedRelease1=LinkedRelease1,TenderStatus1=TenderStatus,OneOfdateintegerboolean=String</typeMappings>
							<importMappings>Error=uk.gov.crowncommercial.dts.scale.cat.model.ApiError</importMappings>
							<verbose>false</verbose>
							<configOptions>
								<sourceFolder>src/gen/java/main</sourceFolder>
								<useBeanValidation>true</useBeanValidation>
								<performBeanValidation>true</performBeanValidation>
								<dateLibrary>java8</dateLibrary>
								<hideGenerationTimestamp>true</hideGenerationTimestamp>
								<openApiNullable>false</openApiNullable>
								<useOptional>true</useOptional>
							</configOptions>
						</configuration>
					</execution>
					<execution>
						<id>conclave-wrapper-api</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>https://tst.api.crowncommercial.gov.uk/user-profiles/swagger/v1/swagger.json</inputSpec>
							<generatorName>spring</generatorName>
							<generateModels>true</generateModels>
							<generateSupportingFiles>false</generateSupportingFiles>
							<generateApis>false</generateApis>
							<generateModelTests>false</generateModelTests>
							<modelPackage>uk.gov.crowncommercial.dts.scale.cat.model.conclave-wrapper.generated</modelPackage>
							<skipValidateSpec>false</skipValidateSpec>
							<strictSpec>true</strictSpec>
							<importMappings>Error=uk.gov.crowncommercial.dts.scale.cat.model.ApiError</importMappings>
							<verbose>false</verbose>
							<configOptions>
								<sourceFolder>src/gen/java/main</sourceFolder>
								<useBeanValidation>true</useBeanValidation>
								<performBeanValidation>true</performBeanValidation>
								<dateLibrary>java8</dateLibrary>
								<hideGenerationTimestamp>true</hideGenerationTimestamp>
								<openApiNullable>false</openApiNullable>
								<useOptional>true</useOptional>
							</configOptions>
						</configuration>
					</execution>
					<execution>
						<id>journey-service-api</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>https://raw.githubusercontent.com/Crown-Commercial-Service/ccs-scale-api-definitions/master/journeys/journeys-service.yaml</inputSpec>
							<generatorName>spring</generatorName>
							<generateModels>true</generateModels>
							<generateSupportingFiles>false</generateSupportingFiles>
							<generateApis>false</generateApis>
							<generateModelTests>false</generateModelTests>
							<modelPackage>uk.gov.crowncommercial.dts.scale.cat.model.journey-service.generated</modelPackage>
							<skipValidateSpec>false</skipValidateSpec>
							<strictSpec>true</strictSpec>
							<importMappings>Error=uk.gov.crowncommercial.dts.scale.cat.model.ApiError</importMappings>
							<verbose>false</verbose>
							<configOptions>
								<sourceFolder>src/gen/java/main</sourceFolder>
								<useBeanValidation>true</useBeanValidation>
								<performBeanValidation>true</performBeanValidation>
								<dateLibrary>java8</dateLibrary>
								<hideGenerationTimestamp>true</hideGenerationTimestamp>
								<openApiNullable>false</openApiNullable>
								<useOptional>true</useOptional>
							</configOptions>
						</configuration>
					</execution>
					<execution>
						<id>capability-service-api</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>https://raw.githubusercontent.com/Crown-Commercial-Service/ccs-scale-api-definitions/feature/SCAT-2918_cap_assessment/capabilities/capability-service.yaml</inputSpec>
							<generatorName>spring</generatorName>
							<generateModels>true</generateModels>
							<generateSupportingFiles>false</generateSupportingFiles>
							<generateApis>false</generateApis>
							<generateModelTests>false</generateModelTests>
							<modelPackage>uk.gov.crowncommercial.dts.scale.cat.model.capability.generated</modelPackage>
							<skipValidateSpec>false</skipValidateSpec>
							<strictSpec>true</strictSpec>
							<languageSpecificPrimitives>OneOfintegerstring</languageSpecificPrimitives>
							<typeMappings>Error=uk.gov.crowncommercial.dts.scale.cat.model.ApiError,OneOfintegerstring=String</typeMappings>
							<importMappings>Error=uk.gov.crowncommercial.dts.scale.cat.model.ApiError</importMappings>
							<verbose>false</verbose>
							<configOptions>
								<sourceFolder>src/gen/java/main</sourceFolder>
								<useBeanValidation>true</useBeanValidation>
								<performBeanValidation>true</performBeanValidation>
								<dateLibrary>java8</dateLibrary>
								<hideGenerationTimestamp>true</hideGenerationTimestamp>
								<openApiNullable>false</openApiNullable>
								<useOptional>true</useOptional>
							</configOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
